--- a/_notebooks/2020-04-14-SARS-CoV2.ipynb
+++ b/_notebooks/2020-04-14-SARS-CoV2.ipynb
@@ -10,8 +10,18 @@
     "- branch: master\n",
     "- badges: false\n",
     "- comments: false\n",
-    "- categories: \n",
-    "- hide: false"
+    "- hide: false\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### The two Figures above showing genetic distance map of SARS-CoV-2 variant strains in the Spike protein amino acid sequences and antigenic distance map of SARS-CoV-2 variant strains in the antigenic epitope amino acid sequences. The other two below showing genetic distance map of SARS-CoV-2 variant strains in the N-terminal domain (NTD) and receptor binding domain (RBD) amino acid sequences and antigenic distance map of SARS-CoV-2 variant strains in the NTD and RBD amino acid sequences. For genetic distance, the vertical and horizontal axes represent genetic distances measured by altered amino acid numbers (1 amino acid/1 A.A. = 1 amino acid alteration). For antigenic distance, the vertical and horizontal axes represent relative antigenic distances measured. (1 arbitrary unit/1 A.U. = 1-fold decrease in the neutralisation titre in log 2 scale). The pink circle shows a two-fold decrease in the neutralisation titre, whereas the dark red circle shows a 16-fold decrease in the neutralisation titre. Colour shows the genetic or antigenic distance to SARS-CoV-2 lineage A.\n",
+    "##### Tips: \n",
+    "* Mouse hover over the points shows the Pangolin lineage of the amino acid sequence belongs to.\n",
+    "* Drop down list can filter parent lineages of these points.\n",
+    "* Details can look up by zoom in with mouse wheel.\n"
    ]
   },
   {
